--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
 <header>
     <h1>কবিতার ঝুড়ি সাহিত্য পত্রিকা</h1>
+    <img src="WhatsApp Image 2025-09-21 at 10.44.25_c9b9f473.jpg" alt="কবিতার ঝুড়ি সাহিত্য পত্রিকা" height="80" width="90">
     <p class="tagline">শব্দে শব্দে জীবনের গল্প</p>
 </header>
 
