--- a/index.html
+++ b/index.html
@@ -22,23 +22,33 @@
     <a href="about.html">আমাদের কথা</a>
     <a href="contact.html">যোগাযোগ</a>
 </nav>
-
+<section class="Notice">
+    <h2>নোটিশ</h2>
+ <p><b>প্রকাশিত হতে ছলেছে নতুন পত্রিকা </b></p>
+ <p><b>উষ্ণ কলম দ্বিতীয় সংখ্যা</b></p>
+</section>
 <section class="featured">
-    <h2>নির্বাচিত লেখা</h2>
-    <p><b>কবিতা:</b> </p>
-    <p><b>ছোটগল্প:</b> <b>তার কালো হরিণ চোখ - পল্লব গুছাইত</b> </p>
-    <p> <b>গল্প:</b> <b> মন যা চায় ,</b>
-        <b>বন্দি - আগমনী সামন্ত</b> </p>
+    <h2>প্রকাশিত পত্রিকা ও সাংকলন</h2>
+    <p><b>শারদ বার্তা ১৪৩২</b> </p>
+    <p><b>উষ্ণ কলম ই ম্যাগাজিন</b></p>
+    <p> <b>দীপান্বিতা ই ম্যাগাজিন</b>
+         </p>
+      <p><b>নিউ প্রজান্ম ই পত্রিকা </b></p> 
+      <p><b>The Voice Off Moon Whisper <br> An English Magazine</b></p>  
+
 </section>
 
 <section class="latest">
     <h2>নতুন প্রকাশিত লেখা</h2>
     <ul>
         <li>বন্দি </li>
-        <li>তার কালো হরিণ চোখ </li>
+        
         <li>মন যা চায়</li>
     </ul>
+    
 </section>
+<section>
+  <h2>নির্বাচিত লেখা</h2>
 
 <section class="editorial">
     <h2>সম্পাদকীয়</h2>
@@ -50,8 +60,55 @@
     </p>
 </section>
 
-<footer>
-    <p>© 2026 কবিতার ঝুড়ি সাহিত্য পত্রিকা | সর্বস্বত্ব সংরক্ষিত</p>
+
+
+
+ <button onclick="document.body.classList.toggle('dark')"
+style="position:fixed;bottom:20px;right:20px;">
+🌙
+</button>
+
+  
+
+
+  
+
+
+<footer class="mag-footer">
+
+  <div class="footer-grid">
+
+    <div class="footer-about">
+      <h3>কবিতার ঝুড়ি সাহিত্য পত্রিকা</h3>
+      <p>
+        কবিতা, গল্প, উপন্যাস ও রম্যরচনার মাধ্যমে
+        শব্দে শব্দে জীবনের কথা তুলে ধরাই আমাদের লক্ষ্য।
+      </p>
+    </div>
+
+    <div class="footer-links">
+      <h4>দ্রুত লিংক</h4>
+      <ul>
+        <li><a href="index.html">হোম</a></li>
+        <li><a href="writings.html">লেখা</a></li>
+        <li><a href="submit.html">লেখা পাঠান</a></li>
+        <li><a href="about.html">আমাদের কথা</a></li>
+        <li><a href="contact.html">যোগাযোগ</a></li>
+      </ul>
+    </div>
+
+    <div class="footer-contact">
+      <h4>যোগাযোগ</h4>
+      <p>📧 kobitarjhuriepotrika@gmail.com</p>
+      <p>📘 Facebook গ্রুপ</p>
+    </div>
+
+  </div>
+
+  <div class="footer-bottom">
+    © 2026 কবিতার ঝুড়ি সাহিত্য পত্রিকা | সর্বস্বত্ব সংরক্ষিত
+  </div>
+
 </footer>
 
 </body>
