--- a/submit.html
+++ b/submit.html
@@ -32,9 +32,43 @@
 </iframe>
 </section>
 
-<footer>
-<p>© 2026 কবিতার ঝুড়ি সাহিত্য পত্রিকা</p>
+<footer class="mag-footer">
+
+  <div class="footer-grid">
+
+    <div class="footer-about">
+      <h3>কবিতার ঝুড়ি সাহিত্য পত্রিকা</h3>
+      <p>
+        কবিতা, গল্প, উপন্যাস ও রম্যরচনার মাধ্যমে
+        শব্দে শব্দে জীবনের কথা তুলে ধরাই আমাদের লক্ষ্য।
+      </p>
+    </div>
+
+    <div class="footer-links">
+      <h4>দ্রুত লিংক</h4>
+      <ul>
+        <li><a href="index.html">হোম</a></li>
+        <li><a href="writings.html">লেখা</a></li>
+        <li><a href="submit.html">লেখা পাঠান</a></li>
+        <li><a href="about.html">আমাদের কথা</a></li>
+        <li><a href="contact.html">যোগাযোগ</a></li>
+      </ul>
+    </div>
+
+    <div class="footer-contact">
+      <h4>যোগাযোগ</h4>
+      <p>📧 kobitarjhuriepotrika@gmail.com</p>
+      <p>📘 Facebook গ্রুপ</p>
+    </div>
+
+  </div>
+
+  <div class="footer-bottom">
+    © 2026 কবিতার ঝুড়ি সাহিত্য পত্রিকা | সর্বস্বত্ব সংরক্ষিত
+  </div>
+
 </footer>
+
 
 </body>
 </html>
