--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <nav>
     <a href="index.html">হোম</a>
-    <a href="writings.html">লেখা</a>
+    <a href="certificate.html">সার্টিফিকেট ডাউনলোড করুন</a>
     <a href="submit.html">লেখা পাঠান</a>
     <a href="about.html">আমাদের কথা</a>
     <a href="contact.html">যোগাযোগ</a>
@@ -34,6 +34,13 @@
     </p>
 </section>
 
+<section class="Upcoming">
+    <h2>Upcoming Events</h2>
+    <ul>
+        <li></li>
+        <li></li>
+    </ul>
+</section>
 <section class="featured">
     <h2>প্রকাশিত পত্রিকা ও সংকলন</h2>
     <p><b>শারদ বার্তা ১৪৩২</b></p>
@@ -43,13 +50,7 @@
     <p><b>The Voice Of Moon Whisper (English Magazine)</b></p>
 </section>
 
-<section class="latest">
-    <h2>নতুন প্রকাশিত লেখা</h2>
-    <ul>
-        <li>বন্দি</li>
-        <li>মন যা চায়</li>
-    </ul>
-</section>
+
 
 <section class="editorial">
     <h2>সম্পাদকীয়</h2>
@@ -82,7 +83,7 @@ style="position:fixed;bottom:20px;right:20px;">
       <h4>দ্রুত লিংক</h4>
       <ul>
         <li><a href="index.html">হোম</a></li>
-        <li><a href="writings.html">লেখা</a></li>
+        <li><a href="certificate.html">সার্টিফিকেট ডাউনলোড করুন</a></li>
         <li><a href="submit.html">লেখা পাঠান</a></li>
         <li><a href="about.html">আমাদের কথা</a></li>
         <li><a href="contact.html">যোগাযোগ</a></li>
