--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
 
 <section>
 <p>📧 ইমেল: kobitarjhuriepotrika@gmail.com</p>
-<p>📘 ফেসবুক: https://www.facebook.com/groups/799404289106232/?ref=share&mibextid=NSMWBT</p>
+<p>📘 Facebook গ্রুপ <a href="https://www.facebook.com/groups/799404289106232/?ref=share&mibextid=NSMWBT">Facebook Group</a></p>
 
 
 </section>
@@ -53,7 +53,7 @@
     <div class="footer-contact">
       <h4>যোগাযোগ</h4>
       <p>📧 kobitarjhuriepotrika@gmail.com</p>
-      <p>📘 Facebook গ্রুপ</p>
+      <p>📘 Facebook গ্রুপ <a href="https://www.facebook.com/groups/799404289106232/?ref=share&mibextid=NSMWBT">Facebook Group</a></p>
     </div>
 
   </div>
