--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <section class="Upcoming">
     <h2>Upcoming Events</h2>
     <ul>
-        <li></li>
+        <li>শুভ মাতৃভাষা দিবস</li>
         <li></li>
     </ul>
 </section>
@@ -93,7 +93,7 @@ style="position:fixed;bottom:20px;right:20px;">
     <div class="footer-contact">
       <h4>যোগাযোগ</h4>
       <p>📧 kobitarjhuriepotrika@gmail.com</p>
-      <p>📘 Facebook গ্রুপ</p>
+      <p>📘 Facebook গ্রুপ <a href=""></a></p>
     </div>
 
   </div>
