--- a/index.html
+++ b/index.html
@@ -34,7 +34,12 @@
         </button>
     </p>
 </section>
-
+<section class="Cover">
+<h2>Publishable Books Book Cover</h2>
+<ul>
+  <img src="Usnokolom second edition Book Cover.png" alt="PublishableBookCover"height="210" width="250">
+</ul>
+</section>
 <!-- ✅ SPACER (ONLY ONE) -->
 <div class="notice-spacer"></div>
 
@@ -52,7 +57,7 @@
   <div class="card-grid">
 
     <div class="mag-card">
-      <img src="Sharodbarta Cover.jpeg"height="50" width="100" loading="lazy" alt="শারদ বার্তা ১৪৩২">
+      <img src="Sharodbarta Cover.jpeg"height="50" width="110" loading="lazy" alt="শারদ বার্তা ১৪৩২">
       <h3>শারদ বার্তা ১৪৩২</h3>
     </div>
 
