--- a/about.html
+++ b/about.html
@@ -13,11 +13,12 @@
 </header>
 
 <nav>
-<a href="index.html">হোম</a>
-<a href="certificate.html">সার্টিফিকেট ডাউনলোড করুন</a>
-<a href="submit.html">লেখা পাঠান</a>
-<a href="about.html">আমাদের কথা</a>
-<a href="contact.html">যোগাযোগ</a>
+  <a href="index.html">হোম</a>
+  <a href="certificate.html">সার্টিফিকেট ডাউনলোড করুন</a>
+  <a href="onlineeventsandcompitition.html">অনলাইন প্রতিযোগিতা</a>
+  <a href="submit.html">লেখা পাঠান</a>
+  <a href="about.html">আমাদের কথা</a>
+  <a href="contact.html">যোগাযোগ</a>
 </nav>
 
 <section>
