--- a/contact.html
+++ b/contact.html
@@ -13,13 +13,13 @@
 </header>
 
 <nav>
-<a href="index.html">হোম</a>
-<a href="certificate.html">সার্টিফিকেট ডাউনলোড করুন</a>
-<a href="submit.html">লেখা পাঠান</a>
-<a href="about.html">আমাদের কথা</a>
-<a href="contact.html">যোগাযোগ</a>
+  <a href="index.html">হোম</a>
+  <a href="certificate.html">সার্টিফিকেট ডাউনলোড করুন</a>
+  <a href="onlineeventsandcompitition.html">অনলাইন প্রতিযোগিতা</a>
+  <a href="submit.html">লেখা পাঠান</a>
+  <a href="about.html">আমাদের কথা</a>
+  <a href="contact.html">যোগাযোগ</a>
 </nav>
-
 <section>
 <p>📧 ইমেল: kobitarjhuriepotrika@gmail.com</p>
 <p>📘 Facebook গ্রুপ <a href="https://www.facebook.com/groups/799404289106232/?ref=share&mibextid=NSMWBT">Facebook Group</a></p>
