--- a/onlineeventsandcompitition.html
+++ b/onlineeventsandcompitition.html
@@ -1,19 +1,15 @@
 <!DOCTYPE html>
-<html lang="bn">
+<html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>সার্টিফিকেট ডাউনলোড | কবিতার ঝুড়ি সাহিত্য পত্রিকা</title>
-<link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Online events </title>
+    <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-
-<header>
-  <h1>সার্টিফিকেট ডাউনলোড</h1>
-  <p class="tagline">প্রকাশিত লেখকদের অফিসিয়াল সার্টিফিকেট</p>
+    <header><h1>Online Events</h1>
+    <p>অনলাইন প্রতিযোগিতা</p>
 </header>
-
 <nav>
   <a href="index.html">হোম</a>
   <a href="certificate.html">সার্টিফিকেট ডাউনলোড করুন</a>
@@ -22,27 +18,23 @@
   <a href="about.html">আমাদের কথা</a>
   <a href="contact.html">যোগাযোগ</a>
 </nav>
+<section class="online-recitation">
+  <h2>🎤 অনলাইন আবৃতি প্রতিযোগিতা</h2>
 
-<section class="certificate-list">
-
-  <div class="certificate-card">
-    <h2>📜 দীপান্বিতা ই-ম্যাগাজিন সার্টিফিকেট</h2>
-    <p>এই লিংক থেকে তুমি “দীপান্বিতা ই-ম্যাগাজিন” এর সার্টিফিকেট ডাউনলোড বা ওপেন করতে পারবে:</p>
-    <a href="https://pallabg22.github.io/Dipwanwita-E-magazine-Certificate/" target="_blank" class="download-btn">
-      ⬇️ দীপান্বিতা সার্টিফিকেট
-    </a>
+  <div class="recitation-box">
+    <img src="Online Compitition.jpeg" alt="first pic" height="150" width="160"> <img src="Online Compition 2.jpeg" alt="2nd pic" height="150" width="160">
+    <br>
+    <img src="Online Compition 3.jpeg" alt="3rdpic" height="150" width="160"> <img src="Online Compition 4.jpeg" alt="4th pic" height="150" width="160">
+    <p>সমস্ত প্রতিযোগী, প্রতিযোগিনী দের জনাই আন্তরক সুভেচ্ছা ও ভালোবাসা।</p>
+    <section class="Result">
+<h2>Congratulations to All participance </h2>
+<li>প্রথম -Sutopa Mondal</li>
+<li>দ্বিতীয় - Souradeep Adhikari</li>
+<li>তৃতীয় - Saptaparna Chatterjee </li>
+<p>সবাই আরো এগিয়ে যান।</p>
+    </section>
   </div>
-
-  <div class="certificate-card">
-    <h2>📜 নিউ প্রজন্ম ই-পত্রিকা সার্টিফিকেট</h2>
-    <p>এই লিংক থেকে তুমি “নিউ প্রজন্ম ই-পত্রিকা” এর সার্টিফিকেট ডাউনলোড বা ওপেন করতে পারবে:</p>
-    <a href="https://pallabg22.github.io/certificate-download/" target="_blank" class="download-btn">
-      ⬇️ নিউ প্রজন্ম সার্টিফিকেট
-    </a>
-  </div>
-
 </section>
-
 <footer class="mag-footer">
   <div class="footer-grid">
     <div class="footer-about">
@@ -75,6 +67,5 @@
     © 2026 কবিতার ঝুড়ি সাহিত্য পত্রিকা | সর্বস্বত্ব সংরক্ষিত
   </div>
 </footer>
-
 </body>
 </html>
