--- a/submit.html
+++ b/submit.html
@@ -13,11 +13,12 @@
 </header>
 
 <nav>
-<a href="index.html">হোম</a>
-<a href="certificate.html">সার্টিফিকেট ডাউনলোড করুন</a>
-<a href="submit.html">লেখা পাঠান</a>
-<a href="about.html">আমাদের কথা</a>
-<a href="contact.html">যোগাযোগ</a>
+  <a href="index.html">হোম</a>
+  <a href="certificate.html">সার্টিফিকেট ডাউনলোড করুন</a>
+  <a href="onlineeventsandcompitition.html">অনলাইন প্রতিযোগিতা</a>
+  <a href="submit.html">লেখা পাঠান</a>
+  <a href="about.html">আমাদের কথা</a>
+  <a href="contact.html">যোগাযোগ</a>
 </nav>
 
 <section>
@@ -48,7 +49,7 @@
       <h4>দ্রুত লিংক</h4>
       <ul>
         <li><a href="index.html">হোম</a></li>
-        <li><a href="certificate.html"></a>সার্টিফিকেট ডাউনলোড করুন</li>
+        <li><a href="certificate.html">সার্টিফিকেট ডাউনলোড করুন</a></li>
         <li><a href="submit.html">লেখা পাঠান</a></li>
         <li><a href="about.html">আমাদের কথা</a></li>
         <li><a href="contact.html">যোগাযোগ</a></li>
